force-app/main/default/objects/dh_superclone__CloneConfiguration__c/dh_superclone__CloneConfiguration__c.object-meta.xml
<CustomObject>
    <label>Clone Configuration</label>
    <nameField>
        <displayFormat>C{0000}</displayFormat>
        <label>Clone Index</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clone Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>