force-app/main/default/objects/dh_superclone__CloneConfiguration__c/fields/dh_superclone__AfterDisplay__c.field-meta.xml
<CustomField>
    <fullName>dh_superclone__AfterDisplay__c</fullName>
    <inlineHelpText>Record List - display a list of new records
First Record (default) - display the first new record
Original Record - display the source record
Object Page - display default object list view</inlineHelpText>
    <label>After Clone Display</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Record List</fullName>
            </value>
            <value>
                <fullName>First Record</fullName>
                <default>true</default>
                <label>First Record</label>
            </value>
            <value>
                <fullName>Original Record</fullName>
            </value>
            <value>
                <fullName>Object Page</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>