force-app/main/default/objects/dh_superclone__CloneConfiguration__c/fields/dh_superclone__AllowCloningMultipleTimes__c.field-meta.xml
<CustomField>
    <fullName>dh_superclone__AllowCloningMultipleTimes__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Allow the user to enter the number of times a record will be cloned.</inlineHelpText>
    <label>Allow Cloning Multiple Times</label>
    <type>Checkbox</type>
</CustomField>