force-app/main/default/objects/dh_superclone__CloneConfiguration__c/fields/dh_superclone__ConfigurationName__c.field-meta.xml
<CustomField>
    <fullName>dh_superclone__ConfigurationName__c</fullName>
    <description>Unique name for the configuration settings.</description>
    <label>Configuration Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>