force-app/main/default/objects/dh_superclone__CloneConfiguration__c/fields/dh_superclone__Description__c.field-meta.xml
<CustomField>
    <fullName>dh_superclone__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>