force-app/main/default/objects/dh_superclone__CloneConfiguration__c/fields/dh_superclone__PrimaryObjectName__c.field-meta.xml
<CustomField>
    <fullName>dh_superclone__PrimaryObjectName__c</fullName>
    <label>Primary Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>