force-app/main/default/objects/dh_superclone__CloneConfiguration__c/fields/dh_superclone__ShowDetailedErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>dh_superclone__ShowDetailedErrorMessage__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If an error occurs while cloning, display the Apex exception message.</inlineHelpText>
    <label>Show Detailed Error Message</label>
    <type>Checkbox</type>
</CustomField>