force-app/main/default/objects/dh_superclone__CloneConfiguration__c/fields/dh_superclone__SkipCloneConfirmationPage__c.field-meta.xml
<CustomField>
    <fullName>dh_superclone__SkipCloneConfirmationPage__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The page to select or deselect child object records is bypassed unless there are errors in the cloning process.</inlineHelpText>
    <label>Skip Clone Confirmation Page</label>
    <type>Checkbox</type>
</CustomField>