force-app/main/default/objects/dh_superclone__CloneConfiguration__c/listViews/dh_superclone__All.listView-meta.xml
<ListView>
    <fullName>dh_superclone__All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>dh_superclone__ConfigurationName__c</columns>
    <columns>NAME</columns>
    <columns>dh_superclone__PrimaryObjectName__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>